# uauth-service

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: dynamic_config_fallback.json  static_config.yaml
src/: CMakeLists.txt  main.cpp
src/handlers/signin/: login_handler.hpp
src/handlers/signup/: registration_handler.hpp
src/handlers/tokens/: tokens.hpp
src/models/: user.hpp
src/repository/: repository.hpp
src/repository/sql/: statements.hpp
src/utils/: dynamic_config_parser.hpp  make_error.hpp
